docs: update in the logic of List Openings
