# docs/swagger.yaml
@@ -223,4 +223,23 @@ paths:
       summary: Update opening
       tags:
       - Openings
+  /openings:
+    get:
+      consumes:
+      - application/json
+      description: List a job openings
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ListOpeningsResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: List opening
+      tags:
+      - Openings
 swagger: "2.0"
