# handler/listOpenings.go
@@ -10,13 +10,13 @@ import (
 // @BasePath /api/v1
 
 // @Summary List opening
-// @Description List a job opening
+// @Description List a job openings
 // @Tags Openings
 // @Accept json
 // @Produce json
 // @Success 200 {object} ListOpeningsResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /opening [get]
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context){
 	openings := []schemas.Opening{}
 
